[GTK][WPE] MemoryMappedGPUBuffer::mapIfNeeded() does not handle mmap() errors properly https://bugs.webkit.org/show_bug.cgi?id=294896

Reviewed by Carlos Garcia Campos.

If mmap() fails MAP_FAILED is returned, which is a special constant
(e.g. (void*)-1, 0xfffff...) indicating the error. We currently return
false from mapIfNeeded() to indicate that the mapping failed, but later
on check if the mapping succeded, by invoking `isMapped()`, which checks
if m_mappedData is non-null, which is the case even if mmap() failed, as
we incorrectly store the special constant in m_mappedData -- the address
of the memory-mapped region. Fix that problem by properly resetting
m_mappedData to nullptr, if mmap() failed.

Covered by existing tests -- they currently crash if mmap() mode fails
instead of falling back to OpenGL texture updates.

* Source/WebCore/platform/graphics/gbm/MemoryMappedGPUBuffer.cpp:
(WebCore::MemoryMappedGPUBuffer::mapIfNeeded):

Canonical link: https://commits.webkit.org/296562@main